Алгоритм прогноза. Оформление страниц. Отображение модального окна.

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/weather-forecast.css">
+    <link rel="favicon" href="/images/favicon.ico">
 
     {{content-for "head-footer"}}
   </head>
